# openclaw-job-search-plugin

./: .gitignore  IDENTITY.md  README.md  USER.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  refresh_plugin.sh  requirements.txt  tsconfig.json
.github/workflows/: README.md  release.yml
assets/profiles/: README.md  sample-software-engineer-profile.md  sample_listing.json
config/: runtime.json  search-defaults.json
data/jobs/: 2026-03-27-product-manager.json
data/profiles/: sample-candidate-profile.md
data/raw/: 2026-03-27-product-manager.json
data/search-runs/: 2026-03-27-product-manager.json  2026-03-27-product-manager.md
memory/: 2026-03-28.md
prompts/: cron-job-searcher.md  job-listing-evaluator-subagent-prompt.md  job-search-cron-orchestration-prompt.md  job-search-orchestrator-cron-prompt.md
runtime/: README.md
runtime-data/cv/: render_game_dev_cv.py  tahsin-mert-ulu-game-dev-cv.md
runtime-data/exports/: 2026-03-27-software-engineer.xlsx  latest.xlsx
runtime-data/jobs/: 2026-03-27-software-engineer.json
runtime-data/profiles/: README.md  sample-software-engineer-profile.md
runtime-data/raw/: 2026-03-27-software-engineer.json
runtime-data/search-plans/: 2026-03-27-software-engineer.json  README.md
runtime-data/search-runs/: 2026-03-27-software-engineer.json  2026-03-27-software-engineer.md
scripts/: export_jobs.py  export_jobs_csv.py  normalize_jobs.py  prepare_search_run.py  render_search_summary.py  verify-embedded-fallback.mjs
specs/: step-1-wrapper-contract.md
tests/: test_export_jobs.py
(+56 files in other folders)
