[project]
name = "job-search-bot"
version = "0.1.0"
description = "OpenClaw job-search plugin with Python JobSpy retrieval worker"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas",
    "pydantic",
    "python-jobspy",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
package = false
